--- a/src/html/forgetPassword.html
+++ b/src/html/forgetPassword.html
@@ -72,12 +72,13 @@
         </div>
         <!-- /.container-fluid -->
     </div>
-    <script src="/lib/js/jquery-1.12.4.min.js "></script>
-    <script src="/lib/js/bootstrap.min.js "></script>
-    <script src="/lib/js/bootstrap-table.min.js "></script>
+    <script src="/lib/js/jquery-1.12.4.min.js"></script>
+    <script src="/lib/js/bootstrap.min.js"></script>
+    <script src="/lib/js/bootstrap-table.min.js"></script>
     <script src="/src/js/common/md5.js"></script>
     <script src="/src/js/common/html5-storage.js"></script>
-    <script type="text/javascript " src="/src/js/personal/updatepass.js"></script>
+    <script type="text/javascript" src="/src/js/common/bootstrap.modal.alert.js"></script>
+    <script type="text/javascript" src="/src/js/personal/updatepass.js"></script>
 </body>
 
 </html>
