--- a/src/html/help.html
+++ b/src/html/help.html
@@ -6,13 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-
     <link href="/lib/css/bootstrap.css" rel="stylesheet">
-
     <link href="/lib/css/bootstrap-table.css" rel="stylesheet">
     <link href="/lib/css/font-awesome.min.css" rel="stylesheet">
-
-    <!--<link href="/src/css/bootstrap-datetimepicker.min.css" rel="stylesheet">-->
     <link href="/src/css/event.css" rel="stylesheet">
     <link href="/src/css/help.css" rel="stylesheet">
 </head>
@@ -29,35 +25,20 @@
             <div class="screening">
                 <div class="row mt30">
                     <div class="col-md-2">&nbsp;</div>
-                    <div class="col-md-8" style="min-width:558px;">
-                        <div style="position: absolute;width:100%;height: 2px;border-top:1px solid #ccc;left:0;bottom:-1px"></div>
+                    <div class="col-md-8" style="min-width:558px;padding-left:0;padding-right:0;">
                         <div class="row border">
-                            <div class="col-md-4 col-sm-4 col-xs-4">
-                                <div class=" col-md-1 col-sm-1"></div>
-                                <div class="col-lg-12 col-md-10 col-sm-10 center" style="border-bottom:1px solid #67BDF6;position:relative">常见问题
-                                    <i class="i jian" style="top:51px"></i>
-                                    <i class="i jian" style="top:50px;border-color:  #fff transparent transparent transparent;"></i>
-                                </div>
-                                <div class=" col-md-1 col-sm-1"></div>
+                            <div class="col-md-4 col-sm-4 col-xs-4 center" style="border-bottom:1px solid #67BDF6;position:relative">常见问题
+                                <i class="i jian" style="top:51px"></i>
+                                <i class="i jian" style="top:50px;border-color:  #fff transparent transparent transparent;"></i>
                             </div>
-                            <div class="col-md-4 col-sm-4 col-xs-4">
-                                <div class=" col-md-1 col-sm-1"></div>
-                                <div class="col-lg-12 col-md-10 col-sm-10 center" style="background:#fff">操作指南
-                                    <i class="i jian" style="top:51px;display:none;"></i>
-                                    <i class="i jian" style="top:50px;display:none;border-color:  #fff transparent transparent transparent;"></i>
-                                </div>
-                                <div class="col-md-1 col-sm-1"></div>
+                            <div class="col-md-4 col-sm-4 col-xs-4 center" style="background:#fff">操作指南
+                                <i class="i jian" style="top:51px;display:none;"></i>
+                                <i class="i jian" style="top:50px;display:none;border-color:  #fff transparent transparent transparent;"></i>
                             </div>
-                            <div class="col-md-4 col-sm-4 col-xs-4">
-                                <div class="col-md-1 col-sm-1"></div>
-                                <div class="col-lg-12 col-md-10 col-sm-10 center">意见反馈
-                                    <i class="i jian" style="top:51px;display:none;"></i>
-                                    <i class="i jian" style="top:50px;display:none;border-color:  #fff transparent transparent transparent;"></i>
-                                </div>
-                                <div class="col-md-1 col-sm-1"></div>
-
+                            <div class="col-md-4 col-sm-4 col-xs-4 center">意见反馈
+                                <i class="i jian" style="top:51px;display:none;"></i>
+                                <i class="i jian" style="top:50px;display:none;border-color:  #fff transparent transparent transparent;"></i>
                             </div>
-
                         </div>
                     </div>
                     <div class="col-md-2">&nbsp;</div>
@@ -67,9 +48,36 @@
                 </div>-->
                 <div class="row mt30">
                     <div class="col-md-2">&nbsp;</div>
-                    <div class="col-md-8 kuai">
+                    <div class="col-md-8 kuai" style="min-width:558px;">
                         <div class="row kuai1" style="display:block;">
                             <div class="changeOne">
+                                <div class="comcss">
+                                    <h1>新用户如何加入到所在企业使用巡线卫士？</h1>
+                                    <p>加入步骤如下：</p>
+                                    <ul>
+                                        <li>新用户可联系所在企业的系统管理员，申请被邀请注册。</li>
+                                        <li>关注微信公众号“pipelinehome”，点击“App应用－App下载”，扫描二维码下载。或进入安卓应用市场（如应用宝、豌豆荚），下载安装“巡线卫士”。</li>
+                                        <li>打开巡线卫士，在登录界面中输入邀请短信中的登录账号和初始密码，登录巡线卫士即可使用。</li>
+                                    </ul>
+                                </div>
+                                <div class="comcss">
+                                    <h1>新用户如何加入到所在企业使用巡线卫士？</h1>
+                                    <p>加入步骤如下：</p>
+                                    <ul>
+                                        <li>新用户可联系所在企业的系统管理员，申请被邀请注册。</li>
+                                        <li>关注微信公众号“pipelinehome”，点击“App应用－App下载”，扫描二维码下载。或进入安卓应用市场（如应用宝、豌豆荚），下载安装“巡线卫士”。</li>
+                                        <li>打开巡线卫士，在登录界面中输入邀请短信中的登录账号和初始密码，登录巡线卫士即可使用。</li>
+                                    </ul>
+                                </div>
+                                <div class="comcss">
+                                    <h1>新用户如何加入到所在企业使用巡线卫士？</h1>
+                                    <p>加入步骤如下：</p>
+                                    <ul>
+                                        <li>新用户可联系所在企业的系统管理员，申请被邀请注册。</li>
+                                        <li>关注微信公众号“pipelinehome”，点击“App应用－App下载”，扫描二维码下载。或进入安卓应用市场（如应用宝、豌豆荚），下载安装“巡线卫士”。</li>
+                                        <li>打开巡线卫士，在登录界面中输入邀请短信中的登录账号和初始密码，登录巡线卫士即可使用。</li>
+                                    </ul>
+                                </div>
                                 <div class="comcss">
                                     <h1>新用户如何加入到所在企业使用巡线卫士？</h1>
                                     <p>加入步骤如下：</p>
@@ -111,14 +119,12 @@
                                     </div>
                                     <div class="feedback_img">
                                         <div class="feedback_img_list left">
-                                            <!--<div class="feedback_images">
-                                                <img src="images/helpImg/1-4.png" alt="" />
-                                                <span onclick="closeImg(this);"></span>
-                                            </div>-->
+                                        </div>
+                                        <div class="feedback_img_file">
+                                            <input type="file" onchange="handleFiles(this);" class="upload_picture" name="file" multiple="multiple" />
                                         </div>
                                         <div class="feedback_img_add left">
                                             <span class="addImg">添加图片</span>
-                                            <input type="file" onchange="handleFiles(this);" id="upload" name="file" multiple="multiple" />
                                         </div>
                                     </div>
                                     <div class="limit">可上传3张图片</div>
@@ -151,15 +157,15 @@
         </div>
         <!-- /.container-fluid -->
     </div>
-    <script src="/lib/js/jquery-1.12.4.min.js "></script>
-    <script src="/lib/js/bootstrap.min.js "></script>
-    <script src="/lib/js/bootstrap-table.min.js "></script>
+    <script src="/lib/js/jquery-1.12.4.min.js"></script>
+    <script src="/lib/js/bootstrap.min.js"></script>
+    <script src="/lib/js/bootstrap-table.min.js"></script>
     <script src="/src/js/common/md5.js"></script>
     <script src="/src/js/common/html5-storage.js"></script>
     <script type="text/javascript" src="/src/js/common/upload.js"></script>
     <script type="text/javascript" src="/src/js/common/ajaxFileupload.js"></script>
-    <!--<script type="text/javascript " src="/src/js/personal/updatepass.js"></script>-->
-    <script type="text/javascript " src="/src/js/personal/help.js"></script>
+    <script type="text/javascript" src="/src/js/personal/help.js"></script>
+    <script src="/src/js/common/bootstrap.modal.alert.js"></script>
 </body>
 
 </html>
