--- a/src/html/loginSet.html
+++ b/src/html/loginSet.html
@@ -97,11 +97,12 @@
         </div>
     </div>
     <p class="words ">北京中盈安信技术服务股份有限公司旗下网站：巡线卫士<span>©</span>2016 京 B2-20080224-16</p>
-    <script src="/lib/js/jquery-1.12.4.min.js "></script>
-    <script src="/lib/js/bootstrap.min.js "></script>
-    <script src="/src/js/common/html5-storage.js "></script>
-    <script src="/src/js/enterprise/LoginSetEnterprised.js "></script>
-    <script src="/src/js/common/md5.js "></script>
+    <script src="/lib/js/jquery-1.12.4.min.js"></script>
+    <script src="/lib/js/bootstrap.min.js"></script>
+    <script src="/src/js/common/html5-storage.js"></script>
+    <script type="text/javascript" src="/src/js/common/bootstrap.modal.alert.js"></script>
+    <script src="/src/js/enterprise/LoginSetEnterprised.js"></script>
+    <script src="/src/js/common/md5.js"></script>
     <script>
     </script>
 </body>
