--- a/src/html/setLogin.html
+++ b/src/html/setLogin.html
@@ -85,11 +85,12 @@
         </div>
 
     </div>
-    <script src="/lib/js/jquery-1.12.4.min.js"></script>
-    <script src="/lib/js/bootstrap.min.js"></script>
-    <script src="/src/js/common/md5.js"></script>
-    <script src="/src/js/common/html5-storage.js"></script>
-    <script src="/src/js/enterprise/setLogin.js"></script>
+    <script type="text/javascript" src="/lib/js/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="/lib/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/src/js/common/md5.js"></script>
+    <script type="text/javascript" src="/src/js/common/bootstrap.modal.alert.js"></script>
+    <script type="text/javascript" src="/src/js/common/html5-storage.js"></script>
+    <script type="text/javascript" src="/src/js/enterprise/setLogin.js"></script>
 </body>
 
 </html>
