--- a/src/html/track.html
+++ b/src/html/track.html
@@ -5,6 +5,7 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <link href="/lib/css/bootstrap.css" rel="stylesheet">
     <link href="/lib/css/bootstrap-table.css" rel="stylesheet">
     <link href="/lib/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
@@ -128,7 +129,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h3 class="modal-title" id="gridSystemModalLabel">巡检详情</h3>
                 </div>
-                <div class="modal-body">
+                <div id="details_content" class="modal-body">
                     <div class="sub_wrapper">
                         <div class="title">
                             <span class="date beginTime_title">--</span>
