--- a/enroll.html
+++ b/enroll.html
@@ -12,105 +12,108 @@
 
 <body>
     <div class="forgotPassword">
-        <div class="title">
-            <div class="logobg"></div>
-            <div class="font">欢迎注册</div>
-        </div>
-        <div class="poskuai">
-            <div class="top"><img src="/src/images/enrollImg/1.png" alt=""></div>
-            <div class="Contain">
-                <div class="bottom1 bottom" style="display:block;">
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>手机号：</div>
-                        <div class="center1 fl"><input class="phone" type="text" placeholder="&nbsp;请输入手机号"></div>
-                        <div class="right1 phoneMeg fl"><span>手机号码不能为空</span></div>
-                    </div>
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>图片验证码：</div>
-                        <div class="center1 fl" style="position:relative"><input class="imgCode" type="text" placeholder="&nbsp;请输入图片上的验证码">
-                            <div class="code"><i></i></div>
-                        </div>
-                        <div class="right1 imgMeg fl"><span></span></div>
-                    </div>
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>短信验证码：</div>
-                        <div class="center1 fl" style="position:relative"><input class="SMScode" type="text" placeholder="&nbsp;请输入短信验证码"><button class="styles">发送短信验证码</button></div>
-                        <div class="right1 SMScodeMsg fl"><span>验证码填写错误</span></div>
-                    </div>
-                    <div class="btn1"><input type="button" name="" value="下一步"></div>
-                </div>
-                <div class="bottom2 bottom">
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>姓名：</div>
-                        <div class="center1 fl"><input class="userName" type="text" placeholder="&nbsp;请输入姓名"></div>
-                        <div class="right1 nameMsg fl"><span>姓名不能为空</span></div>
-                    </div>
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>密码：</div>
-                        <div class="center1 fl"><input class="password1" type="password" placeholder="&nbsp;请输入6-12位英文字母、阿拉伯数字"></div>
-                        <div class="right1 pswMsg1 fl"><span>密码不能为空</span></div>
-                    </div>
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>确认密码：</div>
-                        <div class="center1 fl"><input class="password2" type="password" placeholder="&nbsp;请再次输入密码"></div>
-                        <div class="right1 pswMsg2 fl"><span>密码错误</span></div>
-                    </div>
-                    <div class="one">
-                        <div class="left1 fl">邮箱：</div>
-                        <div class="center1 fl"><input class="email" type="text" placeholder="&nbsp;请输入邮箱地址"></div>
-                        <div class="right1 emailMsg fl"><span>填写错误</span></div>
-                    </div>
-                    <div class="btn2"><input type="button" name="" value="下一步"></div>
-                </div>
-                <div class="bottom3 bottom">
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>企业名称：</div>
-                        <div class="center1 fl"><input class="companyName" type="text" placeholder="&nbsp;企业名称仅支持简体中文、英文大小写字母"></div>
-                        <div class="right1 companyMsg fl"><span></span></div>
-                    </div>
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>公司规模：</div>
-                        <div class="center1 fl">
-                            <select class="companyScale">
-                                <option value="0">请选择</option>
-                                <option value="1">50人以下</option>
-                                <option value="2">50 - 100</option>
-                                <option value="3">100 - 200</option>
-                                <option value="4">200 - 500</option>
-                                <option value="5">500人以上</option>
-                            </select>
-                        </div>
-                        <div class="right1 companyTs fl"><span></span></div>
-                    </div>
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>角色：</div>
-                        <div class="center1 fl">
-                            <select class="companyRole">
-                                <option>请选择</option>
-                                <option value="7ee6a23a-c352-41c2-b2a4-93cb6a1a0e9b">企业管理人员</option>
-                                <option value="dfd82f79-f2d3-4be4-9789-7837d54695f9">巡线工作人员</option>
-                                <option value="b5215de6-12f6-4ebc-a349-db00dccb96f2">其他普通人员</option>
-                            </select></div>
-                        <div class="right1 roleTs fl"><span></span></div>
-                    </div>
-                    <div class="btn3"><input type="button" name="" value="注册"></div>
-                </div>
-                <div class="bottom4 bottom" style="margin-bottom:60px;">
-                    <div class="finish"></div>
-                    <div class="success">恭喜！注册成功</div>
-                    <div class="success" style="font-size:14px;"><span class="jumpTo" style="color:#5EB6F9;">5</span>秒后进入首页</div>
-                    <div class="btn4" style="margin-top:60px;"><input type="button" name="" value="完成"></div>
-                </div>
+        <div class="zhuce">
+            <div class="title">
+                <div class="logobg"></div>
+                <div class="font">欢迎注册</div>
             </div>
-            <div class="Notes">注册表示您同意<a href="">《服务协议》</a>和<a href="">《隐私政策》</a></div>
+            <div class="poskuai">
+                <div class="top"><img src="/src/images/enrollImg/1.png" alt=""></div>
+                <div class="Contain">
+                    <div class="bottom1 bottom" style="display:block;">
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>手机号：</div>
+                            <div class="center1 fl"><input class="phone" type="text" placeholder="&nbsp;请输入手机号"></div>
+                            <div class="right1 phoneMeg fl"><span>手机号码不能为空</span></div>
+                        </div>
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>图片验证码：</div>
+                            <div class="center1 fl" style="position:relative"><input class="imgCode" type="text" placeholder="&nbsp;请输入图片上的验证码">
+                                <div class="code"><i></i></div>
+                            </div>
+                            <div class="right1 imgMeg fl"><span></span></div>
+                        </div>
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>短信验证码：</div>
+                            <div class="center1 fl" style="position:relative"><input class="SMScode" type="text" placeholder="&nbsp;请输入短信验证码"><button class="styles">发送短信验证码</button></div>
+                            <div class="right1 SMScodeMsg fl"><span>验证码填写错误</span></div>
+                        </div>
+                        <div class="btn1"><input type="button" name="" value="下一步"></div>
+                    </div>
+                    <div class="bottom2 bottom">
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>姓名：</div>
+                            <div class="center1 fl"><input class="userName" type="text" placeholder="&nbsp;请输入姓名"></div>
+                            <div class="right1 nameMsg fl"><span>姓名不能为空</span></div>
+                        </div>
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>密码：</div>
+                            <div class="center1 fl"><input class="password1" type="password" placeholder="&nbsp;请输入6-12位英文字母、阿拉伯数字"></div>
+                            <div class="right1 pswMsg1 fl"><span>密码不能为空</span></div>
+                        </div>
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>确认密码：</div>
+                            <div class="center1 fl"><input class="password2" type="password" placeholder="&nbsp;请再次输入密码"></div>
+                            <div class="right1 pswMsg2 fl"><span>密码错误</span></div>
+                        </div>
+                        <div class="one">
+                            <div class="left1 fl">邮箱：</div>
+                            <div class="center1 fl"><input class="email" type="text" placeholder="&nbsp;请输入邮箱地址"></div>
+                            <div class="right1 emailMsg fl"><span>填写错误</span></div>
+                        </div>
+                        <div class="btn2"><input type="button" name="" value="下一步"></div>
+                    </div>
+                    <div class="bottom3 bottom">
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>企业名称：</div>
+                            <div class="center1 fl"><input class="companyName" type="text" placeholder="&nbsp;企业名称仅支持简体中文、英文大小写字母"></div>
+                            <div class="right1 companyMsg fl"><span></span></div>
+                        </div>
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>公司规模：</div>
+                            <div class="center1 fl">
+                                <select class="companyScale">
+                                    <option value="0">请选择</option>
+                                    <option value="1">50人以下</option>
+                                    <option value="2">50 - 100</option>
+                                    <option value="3">100 - 200</option>
+                                    <option value="4">200 - 500</option>
+                                    <option value="5">500人以上</option>
+                                </select>
+                            </div>
+                            <div class="right1 companyTs fl"><span></span></div>
+                        </div>
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>角色：</div>
+                            <div class="center1 fl">
+                                <select class="companyRole">
+                                    <option>请选择</option>
+                                    <option value="7ee6a23a-c352-41c2-b2a4-93cb6a1a0e9b">企业管理人员</option>
+                                    <option value="dfd82f79-f2d3-4be4-9789-7837d54695f9">巡线工作人员</option>
+                                    <option value="b5215de6-12f6-4ebc-a349-db00dccb96f2">其他普通人员</option>
+                                </select></div>
+                            <div class="right1 roleTs fl"><span></span></div>
+                        </div>
+                        <div class="btn3"><input type="button" name="" value="注册"></div>
+                    </div>
+                    <div class="bottom4 bottom" style="margin-bottom:60px;">
+                        <div class="finish"></div>
+                        <div class="success">恭喜！注册成功</div>
+                        <div class="success" style="font-size:14px;"><span class="jumpTo" style="color:#5EB6F9;">5</span>秒后进入首页</div>
+                        <div class="btn4" style="margin-top:60px;"><input type="button" name="" value="完成"></div>
+                    </div>
+                </div>
+                <div class="Notes">注册表示您同意<a href="">《服务协议》</a>和<a href="">《隐私政策》</a></div>
+            </div>
         </div>
+        <p class="words">北京中盈安信技术服务股份有限公司旗下网站：巡线卫士<span>©</span>2016 京 B2-20080224-16</p>
     </div>
-    <p class="words">北京中盈安信技术服务股份有限公司旗下网站：巡线卫士<span>©</span>2016 京 B2-20080224-16</p>
-    <script src="/lib/js/jquery-1.12.4.min.js "></script>
-    <script src="/lib/js/bootstrap.min.js "></script>
+    <script src="/lib/js/jquery-1.12.4.min.js"></script>
+    <script src="/lib/js/bootstrap.min.js"></script>
     <script src="/src/js/login/enroll.js"></script>
-    <script src="/src/js/common/html5-storage.js "></script>
+    <script src="/src/js/common/html5-storage.js"></script>
     <script src="/src/js/common/md5.js"></script>
+    <script src="/src/js/common/bootstrap.modal.alert.js"></script>
     <script>
     </script>
 </body>
