--- a/forget.html
+++ b/forget.html
@@ -12,59 +12,61 @@
 
 <body>
     <div class="forgotPassword">
-        <div class="title">
-            <div class="logobg"></div>
-            <div class="font">找回密码</div>
-        </div>
-        <div class="poskuai">
-            <div class="top"><img src="src/images/forgetImg/1.png" alt=""></div>
-            <div class="Contain">
-                <div class="bottom1" style="display:block;">
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>手机号：</div>
-                        <div class="center1 fl"><input class="phone" type="text" placeholder="请输入手机号"></div>
-                        <div class="right1 phoneMeg fl"><span></span></div>
-                    </div>
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>图片验证码：</div>
-                        <div class="center1 fl" style="position:relative"><input class="imgCode" type="text" placeholder="&nbsp;请输入图片上的验证码">
-                            <div class="code"><i></i></div>
+        <div class="zhuce">
+            <div class="title">
+                <div class="logobg"></div>
+                <div class="font">找回密码</div>
+            </div>
+            <div class="poskuai">
+                <div class="top"><img src="src/images/forgetImg/1.png" alt=""></div>
+                <div class="Contain">
+                    <div class="bottom1" style="display:block;">
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>手机号：</div>
+                            <div class="center1 fl"><input class="phone" type="text" placeholder="请输入手机号"></div>
+                            <div class="right1 phoneMeg fl"><span></span></div>
                         </div>
-                        <div class="right1 imgMeg fl"><span></span></div>
-                    </div>
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>短信验证码：</div>
-                        <div class="center1 fl" style="position:relative"><input class="SMScode" type="text" placeholder="&nbsp;请输入短信验证码"><button class="styles">获取短信验证码</button></div>
-                        <div class="right1 SMScodeMsg fl"><span>短信验证错误</span></div>
-                    </div>
-                    <div class="btn1"><input type="button" name="" value="下一步"></div>
-                </div>
-                <div class="bottom2">
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>重置密码：</div>
-                        <div class="center1 fl"><input class="pw1" type="password" placeholder="&nbsp;请输入6-12位英文字母、阿拉伯数字"></div>
-                        <div class="right1 pswMsg1 fl">
-                            <div><span>密码包含数字，字母，长度9-12位</span></div>
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>图片验证码：</div>
+                            <div class="center1 fl" style="position:relative"><input class="imgCode" type="text" placeholder="&nbsp;请输入图片上的验证码">
+                                <div class="code"><i></i></div>
+                            </div>
+                            <div class="right1 imgMeg fl"><span></span></div>
                         </div>
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>短信验证码：</div>
+                            <div class="center1 fl" style="position:relative"><input class="SMScode" type="text" placeholder="&nbsp;请输入短信验证码"><button class="styles">获取短信验证码</button></div>
+                            <div class="right1 SMScodeMsg fl"><span>短信验证错误</span></div>
+                        </div>
+                        <div class="btn1"><input type="button" name="" value="下一步"></div>
                     </div>
-                    <div class="one">
-                        <div class="left1 fl"><span class="color">*</span>确认密码：</div>
-                        <div class="center1 fl"><input class="pw2" type="password" placeholder="&nbsp;请再次输入新密码"></div>
-                        <div class="right1 pswMsg2 fl"><span>两次输入密码不一致</span></div>
+                    <div class="bottom2">
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>重置密码：</div>
+                            <div class="center1 fl"><input class="pw1" type="password" placeholder="&nbsp;请输入6-12位英文字母、阿拉伯数字"></div>
+                            <div class="right1 pswMsg1 fl">
+                                <div><span>密码包含数字，字母，长度9-12位</span></div>
+                            </div>
+                        </div>
+                        <div class="one">
+                            <div class="left1 fl"><span class="color">*</span>确认密码：</div>
+                            <div class="center1 fl"><input class="pw2" type="password" placeholder="&nbsp;请再次输入新密码"></div>
+                            <div class="right1 pswMsg2 fl"><span>两次输入密码不一致</span></div>
+                        </div>
+                        <div class="btn2"><input type="button" name="" value="下一步"></div>
                     </div>
-                    <div class="btn2"><input type="button" name="" value="下一步"></div>
-                </div>
-                <div class="bottom3" style="margin-bottom:60px;">
-                    <div class="finish"></div>
-                    <div class="success">密码重置完成，请重新登录。</div>
-                    <button class="btnhid">确认</button>
+                    <div class="bottom3" style="margin-bottom:60px;">
+                        <div class="finish"></div>
+                        <div class="success">密码重置完成，请重新登录。</div>
+                        <button class="btnhid">确认</button>
+                    </div>
                 </div>
             </div>
         </div>
+        <p class="words">北京中盈安信技术服务股份有限公司旗下网站：巡线卫士<span>©</span>2016 京 B2-20080224-16</p>
     </div>
-    <p class="words">北京中盈安信技术服务股份有限公司旗下网站：巡线卫士<span>©</span>2016 京 B2-20080224-16</p>
-    <script src="/lib/js/jquery-1.12.4.min.js "></script>
-    <script src="/lib/js/bootstrap.min.js "></script>
+    <script src="/lib/js/jquery-1.12.4.min.js"></script>
+    <script src="/lib/js/bootstrap.min.js"></script>
     <script src="/src/js/login/forget.js"></script>
     <script src="/src/js/common/md5.js"></script>
     <script>
