--- a/src/html/none.html
+++ b/src/html/none.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-    </head>
-    <body>
-         功能建设中，稍候发布，敬请期待...
-    </body>
+
+<head>
+    <title></title>
+    <meta charset="UTF-8">
+</head>
+
+<body>
+    <div style="width:284px;height:284px;margin:0 auto;margin-top:200px;">
+        <img src="/src/images/common/none.png" alt="">
+        <p>功能建设中，稍候发布，敬请期待...</p>
+    </div>
+
+</body>
+
 </html>
